--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<br>
 		<p>Our submissions are open to all, however we especially want to publish marginalized creators. There is an optional section on each form if you would like to self-identify.</p>
 		<br>
+	    <p><b>We accept:</b> personal essays, prose, poetry, art, photography, collages, recipes, playlists, and anything you can send to our e-mail. Feel hesitant about submitting? Don't! We love wacky shit.</p>
+	    <br>
 		<p><b>Format:</b> For written pieces, if you don’t want us to change the format of your piece (background colour, font colour, font, layout) please let us know in the Notes section of the Google Form. We are a visual oriented magazine, so we aim to make a few written pieces also a visual piece of art (for shorter pieces at least), <i>in collaboration with you and the editor</i>. Changes will not be made without your approval. For an example of what we mean, please check out our previous issue.</p>
 		<p><b>Length:</b> 5-400 words for written pieces (excluding recipes). Please include the word length at the beginning of your piece.</p>
 		<p><b>Timeline:</b> We will respond within a month. Most likely, we will respond much earlier, but if you haven't heard from us after a month, please reach out!</p>
